Build mock API for courses and categories (#4)
* build mock api for courses and categories

* move faker-js/json from devdependencies to dependencies

* fix and update fields in courses and categories according to ERD

* Update Total Course Count to 25

* build a new documentation for the api

* Update: minor fixing docs

* feat: use yaml for swagger document instead of json for convenience

* fix: typo and filename on on the routes dir

* feat: improve course schema object

* feat: extract mock data to a seed module

---------
